https://issues.jboss.org/browse/JBIDE-8775
git-svn-id: http://svn.jboss.org/repos/jbosstools/branches/jbosstools-3.2.x@30725 a97e2381-89e5-4abb-bab3-167db6db766c